--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,31 +137,49 @@
 
    <!-- About Section
    ================================================== -->
-   <section id="about">
+   <section id="about" style="background-color: #333; color: #f5f5f5; padding: 60px 0;">
 
       <div class="row">
-
+   
          <div class="three columns">
-
-            <img class="profile-pic" src="images/me.png" alt="" />
-
-            <div class="contact-info">
+   
+            <img class="profile-pic" src="images/me.jpg" alt="" />
+   
+            <div class="contact-info" style="text-align: center;">
                <p><strong>Email:</strong> yunzhe3@ualberta.ca</p>
                <p><strong>Phone:</strong> 416-704-3146</p>
             </div>
-
+   
          </div>
-
+   
          <div class="nine columns main-col">
-
-            <h2>ABOUT ME</h2>
-
-            <p>Hi, I'm Ethan Shi, a Computer Engineering student at the <span>University of Alberta</span>. I have experience in backend development using Java and Python, with a focus on building efficient and scalable systems. I am passionate about cloud computing, backend logic, and automation tools.</p>
-            
+   
+            <h2 style="color: #fff; font-size: 2.5em; margin-bottom: 20px;">ABOUT ME</h2>
+   
+            <p style="font-size: 1.2em; line-height: 1.6em; color: #e0e0e0;">
+               Hi! I’m Ethan Shi, a Computer Engineering student at the University of Alberta with a deep passion for backend development and cloud technologies. My technical journey has allowed me to work with a variety of tools and frameworks, enabling me to solve real-world problems through programming.
+            </p>
+   
+            <p style="font-size: 1.2em; line-height: 1.6em; color: #e0e0e0;">
+               During my internship at Shanghai Foreign Service Co., Ltd., I worked as a Java Backend Developer where I developed and integrated custom backend search logic, allowing users to combine various criteria for advanced search capabilities. I leveraged Java SpringBoot and Maven to build robust development environments, while using MyBatis-Plus to automate database operations. By implementing SpringBoot standards like controllers, service layers, and DAO, I ensured data integrity and simplified the development process. Additionally, I executed JUnit tests and used MockMvcBuilders to validate responses and ensure code reliability.
+            </p>
+   
+            <p style="font-size: 1.2em; line-height: 1.6em; color: #e0e0e0;">
+               Alongside my backend work, I’ve self-learned Python, which led me to explore various projects. I built a 2-D multiplayer shooting game with Pygame, where I implemented collision detection algorithms and streamlined character movement animations. I also developed an object detection system using OpenCV for the University of Alberta Robomaster Club, applying video preprocessing techniques to track and analyze targets in real-time. These projects reflect my love for experimenting with technology and constantly pushing my boundaries.
+            </p>
+   
+            <p style="font-size: 1.2em; line-height: 1.6em; color: #e0e0e0;">
+               I’ve also started exploring cloud technologies in recent months. In one project, I built a portfolio website using Azure services such as Cosmos DB and Azure Functions, introducing me to serverless architectures and cloud database management. I’ve earned the Azure Fundamentals certification and am currently preparing for the Azure 204 certification to further expand my expertise in cloud development.
+            </p>
+   
+            <p style="font-size: 1.2em; line-height: 1.6em; color: #e0e0e0;">
+               I’m excited to apply my skills in backend and cloud development to new challenges, and I’m eager to continue growing in the ever-evolving tech world.
+            </p>
+   
          </div> <!-- end .main-col -->
-
+   
       </div>
-
+   
    </section> <!-- About Section End-->
 
 
