--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
 
    <!--- Basic Page Needs
    ================================================== -->
+	<!--- Basic Page Needs
+   ================================================== -->
    <meta charset="utf-8">
 	<title>Ethan Shi's Resume</title>
 	<meta name="description" content="Resume of Ethan Shi, a Computer Engineering Student at the University of Alberta">
